# codemeant

./: .env.example  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.claude/files/: created.md
.claude/status/: current.md
.clouvel/: analytics.json
.github/workflows/: deploy-api.yml  deploy-web.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/routers/: analysis.py  auth.py  credits.py  waitlist.py  webhooks.py
apps/api/app/services/: ai_analyzer.py  credits.py  supabase_client.py
apps/cli/: package.json
apps/cli/src/: config.ts  index.ts
apps/cli/src/auth/: token-manager.ts
apps/cli/src/commands/: analyze.ts  credits.ts  login.ts
apps/cli/src/extractors/: metadata.ts
apps/web/: next.config.js  package.json  wrangler.toml
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/analysis/[id]/: page.tsx
apps/web/src/app/(dashboard)/credits/: page.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/app/auth/device/: page.tsx
docs/: API.md  ARCHITECTURE.md  DATABASE.md  PRD.md  SURVEY.md  VERIFICATION.md
docs/.clouvel/: analytics.json
supabase/: config.toml
supabase/migrations/: 001_initial.sql  002_waitlist.sql
